Fix the gap

--- a/scss/how-we-work.scss
+++ b/scss/how-we-work.scss
@@ -12,7 +12,8 @@
     &-description {
       max-width: 585px;
       display: grid;
-      grid-gap: 1rem;
+      gap: 1rem;
+      height: max-content;
 
       h5 {
         font-size: 18px;
@@ -22,9 +23,10 @@
 
       h2 {
         font-size: 32px;
-          font-weight: 600;
-          line-height: 2.3rem;
-          color: var(--primary-color);
+        font-weight: 600;
+        line-height: 2.3rem;
+        color: var(--primary-color);
+        max-width: 450px;
       }
 
       p {
@@ -36,7 +38,7 @@
 
       &-process {
         display: grid;
-        grid-gap: 1rem;
+        grid-gap: 2rem;
         margin-top: 1rem;
         position: relative;
 
@@ -64,7 +66,7 @@
           &-text {
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
+            gap: 1rem;
 
             h3 {
               font-size: 20px;
